fix css image overflowing page on small screens

--- a/static/master.css
+++ b/static/master.css
@@ -264,7 +264,7 @@ a {
   border-radius: 5px;
 }
 .teamMember img {
-  width: 100%;
+  max-width: 100%;
 }
 .teamMember p {
   margin: 0 0 24px 0;
